--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "dependencies": {
     "@nuxtjs/axios": "^5.12.5",
     "core-js": "^3.8.3",
-    "nuxt": "^2.14.12"
+    "firebase": "^8.6.4",
+    "nuxt": "^2.14.12",
+    "vuexfire": "^3.2.0-alpha.0"
   },
   "devDependencies": {
     "@nuxtjs/vuetify": "^1.11.3"
